# arwi_essay_task_response

./: README.md  eval_script_arabic_matryoshka.py  eval_script_m_e5.py  eval_script_moe_multi_matryoshka.py  pyproject.toml
