[project]
name = "arwi-essay-task-response"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Kirill Chirkunov",email = "kirill.chirkunov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "numpy (==2.0.2)",
    "einops (>=0.8.1,<0.9.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
